0027784: Thickness fails on cylinder with draft

Incorrect calculation of intersection in 2D space is fixed.